# AFTERHOURS

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLANNING.md  README.md  SECURITY.md  afterhours.db.bak  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
analytics/: __init__.py  equity_curve.py  metrics.py  pnl.py
backtest/: __init__.py  __main__.py  runner.py
calibration/: __init__.py  engine.py  gates.py  resolver.py  settings.py
core/: logging.py  market_hours.py  mode.py  pricing.py
core/bus/: __init__.py  base.py  in_process.py  store.py
core/db/: __init__.py  connection.py  migrate.py
core/schemas/: __init__.py  common.py  decision.py  events.py  signal.py
discovery/: __init__.py  analyst.py  contributions.py  engine.py  extract.py  resolve.py  score.py  settings.py
docs/: README.md  architecture.md  development.md  operator-guide.md  phase-6-plan.md  phase-6a-limitations.md  phase-7-plan.md  phase4-plan.md  phase5-plan.md  pre-phase-6-issues.md  pre-phase-7-risk-review.md  pre-phase6-review.md
docs/adr/: 001-event-bus-contract.md  002-sqlite-local-storage.md  003-api-key-security.md  004-autonomy-model.md  005-exchange-feed-architecture.md  006-llm-thesis-layer.md  007-roadmap-rescope-phase4.md  008-mode-controller.md  009-live-execution-venue.md  010-roadmap-rescope-alt-data-phase6.md  011-analytics-module.md  012-discovery-engine-phase6b.md  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
gateway/: __init__.py  __main__.py  app.py  broadcaster.py  settings.py
gateway/routes/: __init__.py  analytics.py  calibration.py  chart.py  decisions.py  discovery.py  events.py  halt.py  mode.py  portfolio.py  watchlist.py
graphify-out/: GRAPH_REPORT.md  graph.html
ingestion/: __init__.py  base.py  health.py  history.py  pruner.py  router.py
ingestion/alerts/: __init__.py  generator.py  settings.py
ingestion/coinbase/: __init__.py  feed.py  normalizer.py  settings.py
ingestion/congress/: __init__.py  feed.py  normalizer.py  settings.py
ingestion/equity/: __init__.py  feed.py  settings.py
ingestion/govexposure/: __init__.py  feed.py  normalizer.py  resolver.py  settings.py
ingestion/insider/: __init__.py  feed.py  normalizer.py  settings.py
ingestion/kraken/: __init__.py  feed.py  normalizer.py  settings.py
ingestion/news/: __init__.py  feed.py  normalizer.py  settings.py
ingestion/supplychain/: __init__.py  extractor.py  feed.py  resolver.py  settings.py
portfolio/: __init__.py  executor.py  ledger.py  models.py  settings.py
reasoning/decision/: __init__.py  generator.py  prompt.py  settings.py
reasoning/llm/: __init__.py  base.py  cache.py  settings.py  throttle.py
reasoning/thesis/: __init__.py  generator.py  invalidator.py  prompt.py  settings.py
risk/: __init__.py  engine.py  settings.py  sizing.py
tests/: conftest.py
tests/analytics/: test_equity_curve.py  test_metrics.py  test_pnl.py  test_risk_metrics.py
tests/backtest/: test_runner.py
watchlist/: __init__.py  manager.py  settings.py  store.py
(+78 files in other folders)
